Fixed issue in which the list to join a room would hide behind the create room form on mobile.

--- a/public/index.css
+++ b/public/index.css
@@ -64,6 +64,7 @@ button {
   top: 30%;
   left: 17.25%;
   width: 4.608em;
+  z-index: 10;
 
 }
 
